Updated Doc and Routes
