# routes/purchase.js
@@ -43,4 +43,11 @@ router.post('/edit/:id', auth, function(req, res, next){
     });
 });
 
+router.post('/delete/:id', auth, function(req, res, next){
+    Purchase.remove({_id: req.params.id }, function(err){
+        console.log(err);
+        res.send("k");
+    });
+});
+
 module.exports = router;
